# ulverify

./: Cargo.toml
src/: aasa.rs  main.rs
src/android/: apk.rs  assetlinks.rs  mod.rs
src/ios/: aasa.rs  check.rs  entitlements.rs  mod.rs  report.rs
