[package]
name = "ulverify"
version = "0.1.0"
authors = ["Daniel Basedow <daniel.basedow@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.12.11"
tokio = "0.1.11"
futures = "0.1.25"
http = "0.1.13"
bytes = "0.4.10"
hyper-tls = "0.3.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
regex = "1"
regex-syntax = "0.6"
